# homelink

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.toml  docker-compose.yaml  docker_config.toml  docker_log4rs.yaml  log4rs.yaml  miot_to_hap.toml  run.Dockerfile  test.json
ble-monitor/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: errors.rs  mod.rs  output.rs  params.rs  results.rs  router.rs  state.rs
core/src/api/controller/: hap_accessory.rs  hap_bridge.rs  hap_characteristic.rs  hap_metadata.rs  hap_service.rs  iot_device.rs  miot_device.rs  mod.rs  native_ble_device.rs  source_device.rs  sys_users.rs  system.rs  template.rs
core/src/api/params/: template.rs  test.rs
core/src/config/: context.rs
core/src/db/: enum_factory.rs  init.rs  insert_auto_fill.rs  mod.rs  snowflake.rs
core/src/db/entity/: hap_accessory.rs  hap_bridge.rs  hap_characteristic.rs  hap_service.rs  iot_device.rs  mi_account.rs  miot_device.rs  mod.rs
core/src/db/service/: hap_bridge_service.rs  mod.rs  template_service.rs
core/src/device/: mod.rs
core/src/device/native_ble/: mod.rs  native_ble_device.rs
core/src/device/platform/: miot_spec_dev.rs  mod.rs
core/src/graphql/: handler.rs  mod.rs  query_root.rs
core/src/graphql/query/: demo.rs  mod.rs
core/src/hap/: db_bridge_storage.rs  miot2hap.rs  mod.rs
core/src/init/: accessory_init.rs  characteristic_init.rs  hap_init.rs  logger_init.rs  mod.rs
core/src/init/helper/: template_helper.rs
core/src/init/manager/: ble_manager.rs  device_manager.rs  mi_account_manager.rs  mod.rs  template_manager.rs
core/src/js_engine/: deno_runtime.rs  mod.rs
core/src/js_engine/channel/: main_channel.rs  params.rs
core/src/js_engine/scripts/: mod.rs
core/src/migration/: mod.rs
core/src/service/: hap_bridge_service.rs  mod.rs
core/src/socketio/: context.rs  mod.rs
core/src/socketio/task/: mod.rs  native_blt_log_task.rs
core/src/template/: checker.rs  hap.rs  hl_template.rs  miot_template.rs  mod.rs
core/src/template/hap/: accessory.rs  bridge.rs  chars.rs  service.rs
core/src/unit_convertor/: eval_expr_convertor.rs  factory.rs  kelvin_to_mired_convertor.rs  mod.rs  scale_down.rs
hap-metadata/: Cargo.toml
hap-metadata/src/: metadata.rs  utils.rs
hap-rs-new/: Cargo.toml
hap-rs-new/src/: lib.rs
hap-rs-new/src/server/: mod.rs
hap-rs-new/src/test/: mod.rs  test_mdns.rs
hl-device/: Cargo.toml
hl-device/src/: error.rs  lib.rs
hl-device/src/event/: emitter.rs  events.rs  mod.rs
hl-device/src/hap_platform/: hap_device_ext.rs  mod.rs
hl-device/src/hl_device/: mod.rs
hl-device/src/platform/: mod.rs
hl-device/src/platform/hap/: hap_device_ext.rs
hl-integration/: Cargo.toml
hl-integration/src/: error.rs  integration.rs  lib.rs
hl-integration/src/convertor/: ext.rs  ext_factory.rs  mod.rs
hl-integration/src/convertor/buildin/: kelvin_to_mired_convertor.rs  mod.rs
hl-integration/src/event/: emitter.rs  events.rs  mod.rs
hl-integration/src/hl_device/: manager.rs  mod.rs
hl-integration/src/platform/hap/: hap_device.rs  mod.rs  prop_mapping.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/api/: errors.rs  params.rs  results.rs  router.rs  state.rs
lib/src/api/controller/: hap_bridge.rs  hap_characteristic.rs  hap_metadata.rs  iot_device.rs  miot_device.rs  mod.rs
lib/src/config/: cfgs.rs  context.rs
lib/src/db/: snowflake.rs
lib/src/db/entity/: hap_accessory.rs  hap_characteristic.rs  hap_service.rs  iot_device.rs  mod.rs  prelude.rs
lib/src/db/service/: hap_bridge_service.rs
lib/src/device/: mod.rs
lib/src/device/native_ble/: mod.rs  native_ble_device.rs
lib/src/device/platform/: hap.rs  miot_spec_dev.rs  mod.rs
lib/src/hap/: config.rs  hap_type.rs  miot2hap.rs  mod.rs
lib/src/hap/iot/: iot_characteristic.rs  iot_hap_accessory.rs  iot_hap_service.rs  mod.rs
lib/src/hap/models/: delegate.rs  mod.rs  model_example.rs  model_ext_database.rs
lib/src/hap/template/: miot_template.rs
lib/src/hap/unit_convertor/: eval_expr_convertor.rs  kelvin_to_mired_convertor.rs  mod.rs  scale_down.rs
lib/src/init/: accessory_init.rs  characteristic_init.rs  device_init.rs  hap_init.rs  logger_init.rs  mod.rs
lib/src/init/helper/: template_helper.rs
lib/src/init/manager/: ble_manager.rs  device_manager.rs  hap_manager.rs  mod.rs  template_manager.rs
lib/src/js_engine/: init_hap_accessory_module.rs  init_js_engine.rs  ops.rs
lib/src/js_engine/channel/: mod.rs  resource.rs  results.rs
lib/src/migration/: mod.rs
lib/src/template/: miot_template.rs  mod.rs
mibtl/: Cargo.toml
mibtl/src/: lib.rs
miot_spec/: Cargo.toml
miot_spec/src/: errors.rs
miot_spec/src/cloud/: mi_cloud_device_group.rs  mod.rs  state.rs  types.rs
miot_spec/src/device/: cloud_device.rs  emitter.rs  gw_zigbee_device.rs  mesh_device.rs  miot_spec_device.rs  mod.rs  utils.rs  value.rs  wifi_device.rs
miot_spec/src/device/ble/: ble_device.rs  value_types.rs
miot_spec/src/device/common/: emitter.rs  mod.rs  utils.rs
miot_spec/src/device/gateway/: gateway.rs  mod.rs  test_mqtt.rs  test_telnet.rs
miot_spec/src/proto/: miio_proto.rs  mod.rs  protocol.rs
miot_spec/src/proto/transport/: ble_mapping_proto.rs  cloud_miio_proto.rs  gateway_mqtt.rs  miio_udp_transport.rs  mod.rs  open_miio_mqtt_proto.rs  udp_iot_spec_proto.rs
source-platform/ble-native/ble-monitor/: Cargo.toml
source-platform/ble-native/ble-monitor/src/: error.rs  lib.rs  parse_advertisement.rs
source-platform/hl-virtual/: Cargo.toml
source-platform/hl-virtual/src/: lib.rs
source-platform/xiaomi/miot-proto/: Cargo.toml
source-platform/xiaomi/miot-proto/src/: utils.rs
source-platform/xiaomi/xiaomi-ble-packet/: Cargo.toml
source-platform/xiaomi/xiaomi-ble-packet/src/: ble_value_type.rs  error.rs  lib.rs
source-platform/xiaomi/xiaomi-integration/: Cargo.toml
source-platform/xiaomi/xiaomi-integration/src/: integration.rs  lib.rs
target-platform/hap/target-hap/: Cargo.toml
target-platform/hap/target-hap/src/: delegate.rs  hap_manager.rs  hap_type_wrapper.rs  lib.rs  types.rs
(+126 files in other folders)
