[workspace]
members = ["miot_spec", "bin", "hap_metadata", "hap-rs", "libmdns"]
resolver = "2"
#exclude=["hap-rs/codegen"]
[profile.dev]
split-debuginfo = "unpacked"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
anyhow = "1.0.76"
axum = "0.6.20"
tower-http = { version = "0.4.0", features = ["fs","catch-panic"] }
rust-embed = "8.2.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
#log = "^0.4.20" 1.24.2
tokio = { version = "1.24.2", features = ["full"] }
log = "^0.4.17"
once_cell = "1.19.0"
bytes = "1.5.0"
chrono = "0.4.30"
impl_new = "0.2.1"
deno_runtime = { version = "0.137.0" }
rust-crypto = "0.2.36"
base64 = "0.21.5"
lazy_static = "1.4.0"
#deno_runtime = { path = "/Users/huanxi/tmp/deno/runtime", features = ["dont_use_runtime_snapshot"] }
[profile.release]
strip = true
lto = true
opt-level = "z"
#codegen-units = 1
