[workspace]
members = [ "core",
    "target-platform/hap/hap-metadata",
    "target-platform/hap/hap-rs",
    "libmdns",
    "source-platform/ble-native/ble-monitor",
    "bin",
    "hl-integration",
    "source-platform/xiaomi/xiaomi-ble-packet",
    "source-platform/xiaomi/miot-proto",
    "source-platform/xiaomi/xiaomi-integration",
    "target-platform/hap/target-hap",
    "hl-common",
    "homelink-macro",
    "source-platform/hl-virtual",
#    "target-platform/hap/dbus-avahi",
]
resolver = "2"
#exclude=["hap_platform-rs/codegen"]
[profile.dev]
split-debuginfo = "unpacked"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
anyhow = "1.0.76"
tap = "1.0.1"
#axum = "0.6.20"
axum = "0.7.4"
tower-http = { version = "^0.5.2", features = ["fs", "catch-panic"] }
socketioxide = {version = "^0.10.2" ,features = ["extensions","state"]}
rust-embed = "8.2.0"
serde_json = "1.0.113"
serde = { version = "1.0.193", features = ["derive"] }
#log = "^0.4.20" 1.24.2
tokio = { version = "1.24.2", features = ["full"] }
log = "^0.4.17"
log4rs = { version = "1.2.0", features = ["default"] }
once_cell = "1.19.0"
bytes = "1.5.0"
chrono = "0.4.30"
impl_new = "0.2.1"
#deno_runtime = { version = "0.137.0" }
rust-crypto = "0.2.36"
base64 = "0.21.5"
lazy_static = "1.4.0"
futures-util = "0.3.30"
num_enum = "0.7.2"
thiserror = "1.0.56"
async-trait = "0.1"
packed_struct = "0.10.1"
strum = "0.26.1"
strum_macros = "0.26"
dashmap = "5.5.3"
rand = "0.8.5"
bimap = { version = "0.6.3", features = ["serde"] }
#deno_runtime = { path = "/Users/huanxi/tmp/deno/runtime", features = ["dont_use_runtime_snapshot"] }
[profile.release]
#strip = true
#lto = true
#opt-level = "z"

