[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hap-metadata = { path = "../target-platform/hap/hap-metadata" }
miot-proto = { path = "../source-platform/xiaomi/miot-proto" }
ble-monitor = { path = "../source-platform/ble-native/ble-monitor" }
hl-virtual = { path = "../source-platform/hl-virtual" }
hl-integration = { path = "../hl-integration" }
target-hap = { path = "../target-platform/hap/target-hap" }

hap = { path = "../target-platform/hap/hap-rs" }
xiaomi-ble-packet = { path = "../source-platform/xiaomi/xiaomi-ble-packet" }
hex = "0.4.3"
anyhow = "1.0.76"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
md5 = { version = "0.7.0", features = [] }
aes = { version = "0.7.5", features = [] }
log = { workspace = true }
packed_struct = "0.10.1"
#block-modes = "0.9.1"
block-modes = "0.8"
rust-crypto.workspace = true
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
bytes.workspace = true
tap.workspace = true
lazy_static.workspace = true
strum.workspace = true
strum_macros.workspace = true
axum.workspace = true
log4rs = { version = "1.2.0", features = ["default"] }

toml = "0.8.8"
#axum = "0.7.3"
#axum-extra = "0.9.0"
#axum-server = "0.4.6"
dashmap = "5.5.3"

rand = "0.7.3"
futures-util = "0.3.30"

mime = "0.3.17"
serde-aux = "4.3.1"
snowdon = "0.2.0"
base64.workspace = true
chrono.workspace = true
evalexpr = "11.3.0"
async-trait = "0.1.77"
num_enum = "0.7.2"
bimap = { version = "0.6.3", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
#deno_runtime = { workspace = true}
#deno_runtime = { workspace = true, optional = true }
once_cell = { workspace = true }
derive_builder = "0.12.0"
rust-embed.workspace = true
impl_new = "0.2.1"
sea-orm-migration = "0.12.12"
thiserror = "1.0.56"
tower-http.workspace = true
url = "2.4.1"
async-recursion = "1.0.5"
btleplug = {version = "0.11.5",features = ["serde"]}
jsonwebtoken = "9.2.0"
#async-graphql-axum = "6.0.11"
#async-graphql = { version = "6.0.11", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
#seaography = { version = "1.0.0-rc.2", features = ["with-decimal", "with-chrono"] }
#seaography = { path = "../seaography" ,features = ["default","with-json","with-chrono","with-decimal"] }
socketioxide.workspace = true


sea-orm = { version = "0.12.10", features = ["macros", "runtime-tokio-native-tls", "with-chrono"] }
tracing = "0.1.40"
serde_yaml = "0.9.32"

#dirs = "5.0.1"
#url = "2.1"
# 仓库中的bug
#[dependencies.seaography]
#git = "https://github.com/SeaQL/seaography.git"
#branch = "main"
#features = ["with-decimal", "with-chrono"]

[dev-dependencies]
tracing-subscriber = "0.3.18"

[features]
default = ["sqlite", ]
#default = ["postgres", "mysql", "sqlite"]
#mysql = ["sea-orm/sqlx-mysql"]
#postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
#deno = ["deno_runtime"]
deno = []
