[package]
name = "hap-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
handlebars = "2.0"
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "0.8", features = ["v4", "serde"] }
