[package]
name = "hap-rs-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "time", "macros"] }


aead = "0.4"
async-trait = "0.1"
byteorder = "1.3"
bytes = "1.0"
chacha20poly1305 = "0.8"
ed25519-dalek = { version = "1.0", features = ["std", "serde"] }
erased-serde = "0.3"
macaddr = { version = "1.0.1", features = ["serde"] }
futures = "0.3"
get_if_addrs = "0.5"
hkdf = "0.11"
hyper = { version = "0.14", features = ["server", "http1"] }
#libmdns = {path = "/Users/huanxi/project/libmdns"}
log = "^0.4"
num = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.9"
signature = "1.1"
srp = "0.5"
thiserror = "1.0"
url = "2.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
x25519-dalek = "0.6"
