[package]
name = "hl-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hap = { path = "../hap-rs" }
tokio.workspace = true
log.workspace = true
futures-util.workspace = true
serde.workspace = true
num_enum.workspace= true
impl_new.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true

