[package]
name = "hl-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hap = { path = "../target-platform/hap/hap-rs" }

tokio.workspace = true
anyhow.workspace = true
once_cell.workspace = true
dashmap.workspace = true
log.workspace = true
futures-util.workspace = true
serde.workspace = true
num_enum.workspace = true
impl_new.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true
rand.workspace = true

#[dev-dependencies]
#proc-macro = "1.75.0"