[package]
name = "mibtl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
log.workspace = true
futures-util.workspace = true
btleplug = "0.11.5"
btsensor = "0.1.0"
#dbus = { version = "0.9.7", features = ["vendored"] }

#dbus = { version = "0.9.7", features = ["vendored"] }
#dbus = { version = "0.9.7" }
[dev-dependencies]
pretty_env_logger = "0.5.0"