[package]
name = "miot_spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.76"
md5 = { version = "0.7.0", features = [] }
aes = { version = "0.7.5", features = [] }
log = { version = "0.4.20", features = [] }
packed_struct = "0.10.1"
block-modes = "0.8"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.30"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
rand = "0.8.5"
paho-mqtt = "0.12.3"
#mini-telnet = "0.1.8"
mini-telnet = { path = "/Users/huanxi/tmp/mini-telnet" }
base64 = "0.21.5"
tap = "1.0.1"
async-channel = "1.9.0"
reqwest_cookie_store = "0.6.0"
sha2 = "0.10.8"
async-trait = "0.1.77"


[dev-dependencies]
env_logger = "0"
