[package]
name = "ble-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiaomi-ble-packet = { path = "../../xiaomi/xiaomi-ble-packet" }
tokio.workspace = true
log.workspace = true
futures-util.workspace = true
tap.workspace = true
serde.workspace = true
thiserror.workspace = true
num_enum.workspace = true
impl_new.workspace = true
btleplug = "0.11.5"
btsensor = "0.1.0"
uuid = { version = "1.7.0", features = ["v4"] }
hex = "0.4.3"
packed_struct = "0.10.1"

[target.aarch64-unknown-linux-musl.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
[target.x86_64-unknown-linux-musl.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
[dev-dependencies]
pretty_env_logger = "0.5.0"
