[package]
name = "xiaomi-ble-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum.workspace = true
serde.workspace = true
thiserror.workspace = true
packed_struct.workspace = true
strum.workspace = true
strum_macros.workspace = true
