[package]
name = "xiaomi-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miot-proto = { path = "../miot-proto" }
hl-integration = { path = "../../../hl-integration" }
target-hap = { path = "../../../target-platform/hap/target-hap" }
xiaomi-ble-packet = { path = "../xiaomi-ble-packet" }
tokio.workspace = true
bimap.workspace = true
anyhow.workspace = true
log.workspace = true
tap.workspace = true
num_enum.workspace = true
impl_new.workspace = true
thiserror.workspace = true

once_cell.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
async-trait.workspace = true
serde_json.workspace = true
rand.workspace = true