[package]
name = "target-hap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hl-integration = { path = "../../../hl-integration" }
hap = { path = "../hap-rs" }
hap-metadata = { path = "../hap-metadata" }
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
tap.workspace = true
num_enum.workspace = true
impl_new.workspace = true
thiserror.workspace = true

once_cell.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
async-trait.workspace = true
serde_json.workspace = true
rand.workspace = true
strum.workspace = true
#enum_to_enum = "0.1.0"
#uuid = { version = "1.7.0", features = ["v4"] }
